<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xmnode.demo.activity.QrcodeActivity"
    android:orientation="vertical">

    <include layout="@layout/layout_title" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_scan_qr"
        android:layout_gravity="center_horizontal"
        android:text="@string/qrcode_scan"
        android:layout_margin="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qrcode_result"
            android:textSize="18sp"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_scan_result"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_qr_string"
        android:hint="@string/qrcode_hint"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qrcode_generate"
        android:id="@+id/btn_generate_qrcode"
        android:layout_margin="10dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/iv_qr_image"
        android:layout_margin="10dp" />
</LinearLayout>
