<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_fragment"
    android:orientation="vertical">

    <include layout="@layout/layout_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvRefresh"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/item_click"
                android:drawableRight="@drawable/ic_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/main_refresh"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider"/>

            <TextView
                android:id="@+id/tvMultiDisplay"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/item_click"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/main_multi_photo_display"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider"/>


            <TextView
                android:id="@+id/tvRoundDisplay"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/item_click"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/main_round_photo_display"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider"/>

            <TextView
                android:id="@+id/tvSlidingTab"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/item_click"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/main_sliding_tab"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider"/>

            <TextView
                android:id="@+id/tvSlidingMenu"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/item_click"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/main_sliding_menu"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider"/>

            <TextView
                android:id="@+id/tvImageGallery"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/item_click"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/main_iamge_gallery"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider"/>

            <TextView
                android:id="@+id/tvImageCrop"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/item_click"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/main_image_crop"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider"/>

            <TextView
                android:id="@+id/tvImageScale"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/item_click"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/main_image_scale"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider"/>

            <TextView
                android:id="@+id/tvQrcode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/item_click"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/main_qrcode"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider"/>

            <TextView
                android:id="@+id/tvWebview"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/item_click"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/main_js"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider"/>
            <TextView
                android:id="@+id/tv_ripper"
                android:onClick="tv_ripper"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/item_click"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/main_ripple"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider"/>
            <TextView
                android:id="@+id/tvSendcode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/item_click"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/main_sendcode"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider"/>
            <TextView
                android:id="@+id/tvToolbar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/item_click"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="Toolbar"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider"/>
            <TextView
                android:id="@+id/tvTagView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/item_click"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="标签展示"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider"/>
            <TextView
                android:id="@+id/tvGuaguaka"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/item_click"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="刮刮卡"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider"/>
            <TextView
                android:id="@+id/tvVolume"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/item_click"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="自定义音量控件"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider"/>
            <TextView
                android:id="@+id/tvScroll"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/item_click"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="防商品滑动效果"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider"/>
            <TextView
                android:id="@+id/tvAddCart"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/item_click"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="添加购物车抛物线"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider"/>
            <TextView
                android:id="@+id/tvToolbarDemo"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/item_click"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="ToolbarDemo"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider"/>
            <TextView
                android:id="@+id/tvGif"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/item_click"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="GIF"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16"
                android:visibility="gone"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider"/>
            <TextView
                android:id="@+id/tvIntent"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/item_click"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="Intent List"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16"
               />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>


